# dramvalue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml  dramvalue_bottles.csv  dramvalue_whisky_analysis.ipynb  pyproject.toml  scrapy.cfg  whisky_bottles.csv  whisky_market_stats.csv  whisky_price_analysis.ipynb  whisky_prices.csv
alembic/: env.py
alembic/versions/: 8aa569eb3769_initial_migration.py  bf21d8488c62_add_scrape_runs_table.py  c4e8a1b92f03_add_auction_house_enum_values.py  f72066955838_add_price_alerts_table.py
data/: dramvalue_prices.csv
deploy/nginx/: dramvalue.com
docs/api/: API.md  CONNECTION.example.md  README.md
docs/project/: ARCHITECTURE.md  PHASE3A_IMPLEMENTATION_PLAN.md  PROJECT_CHARTER.md  PROJECT_STATUS.md  RISK_REGISTER.md  TIMELINE.md
docs/project/DECISIONS/: DEC-001-database-selection.md  DEC-002-algorithm-abstraction.md  DEC-003-server-side-rendering.md  DEC-004-self-rolled-authentication.md  DEC-006-service-layer-pattern.md  DEC-007-response-envelope.md  DEC-008-search-strategy.md  DEC-009-chart-aggregation.md
docs/project/MEETING_NOTES/: 2025-12-27-architecture-design.md  2025-12-27-project-kickoff.md  2025-12-28-infrastructure-implementation.md  (+1 more)
portfolio/: index.html
scripts/: backup_db.sh  deploy.sh  fix-permissions.sh  import_kaggle_brands.py  import_kaggle_casks.py  import_kaggle_market.py  reimport_csv_data.py  scrape_retail.py  setup-production.sh  setup_feed_api.sh  setup_nginx_certbot.sh  weekly_backup.sh
src/: __init__.py  main.py
src/algorithms/: __init__.py
src/api/: __init__.py  deps.py  response.py
src/core/: config.py  rate_limit.py  security.py
src/db/: __init__.py  session.py
src/models/: __init__.py  alert.py  audit.py  bottle.py  collection.py  market_stat.py  moderation.py  price.py  scrape_run.py  submission.py  user.py
src/schemas/: __init__.py  bottle.py  price.py
src/scrapers/: __init__.py  items.py  reddit_tracker.py  settings.py  spider_settings.py
src/services/: __init__.py  ai_service.py  base.py  bottle_service.py  email_service.py  price_service.py
src/tasks/: __init__.py  celery_app.py  maintenance.py  scraping.py
static/: index.html
templates/: about.html  base.html  brands.html  home.html  market.html  privacy.html  profile.html  search.html  terms.html  trending.html
templates/alerts/: list.html
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
templates/bottles/: detail.html  list.html
templates/collections/: detail.html  list.html
tests/: __init__.py  conftest.py
(+48 files in other folders)
