[project]
name = "wtracker"
version = "0.1.0"
description = "Secondary Market Spirits Price Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "WTracker Team"}
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.1.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Forecasting
    "prophet>=1.1.5",

    # Scraping
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.33",
    "playwright>=1.41.0",

    # Background Tasks
    "celery[redis]>=5.3.0",

    # Text Matching (for bottle normalization)
    "rapidfuzz>=3.5.0",

    # Anomaly Detection
    "scikit-learn>=1.4.0",

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # HTTP Client (for external APIs)
    "httpx>=0.26.0",

    # Email (AWS SES)
    "boto3>=1.34.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # AI Services
    "perplexityai>=0.23.0",

    # Utilities
    "python-dateutil>=2.8.2",

    # HTTP Compression
    "brotli>=1.1.0",

    # Reddit API
    "praw>=7.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage (ok in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
